[gd_scene load_steps=52 format=2]

[ext_resource path="res://image/texture2.jpg" type="Texture" id=1]
[ext_resource path="res://image/texture1.jpg" type="Texture" id=2]
[ext_resource path="res://scene/milk.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/gui_3d.gd" type="Script" id=4]
[ext_resource path="res://font/Basketball.otf" type="DynamicFontData" id=5]
[ext_resource path="res://script/menu.gd" type="Script" id=6]
[ext_resource path="res://image/ok1.png" type="Texture" id=7]
[ext_resource path="res://font/JandaManateeSolid.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://image/ok2.jpg" type="Texture" id=9]

[sub_resource type="SpatialMaterial" id=1]
params_diffuse_mode = 3
albedo_texture = ExtResource( 1 )
metallic = 0.6
metallic_specular = 1.0
roughness = 0.8
uv1_scale = Vector3( 6, 4, 4 )
uv1_triplanar_sharpness = 1.03526

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
flip_faces = true
size = Vector3( 10, 9, 7 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.1, 2 )

[sub_resource type="SpatialMaterial" id=4]
params_diffuse_mode = 3
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 0.5, 1, 0.25 )
uv1_offset = Vector3( 0.5, 0.25, 0.5 )
uv1_triplanar = true
uv1_triplanar_sharpness = 1.03526

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 2, 0.2, 4 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.12, 0.7, 0.12 )

[sub_resource type="SpatialMaterial" id=7]
params_diffuse_mode = 3
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 3, 2, 2.5 )
uv1_triplanar_sharpness = 1.03526

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 0.24, 1.4, 0.24 )

[sub_resource type="ProceduralSky" id=9]

[sub_resource type="Environment" id=10]
background_mode = 2
background_sky = SubResource( 9 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.7
ambient_light_sky_contribution = 0.0
tonemap_mode = 3
tonemap_exposure = 0.8

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=13]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 3
extra_spacing_space = 2
font_data = ExtResource( 5 )

[sub_resource type="QuadMesh" id=16]
size = Vector2( 3, 2 )

[sub_resource type="ViewportTexture" id=17]
viewport_path = NodePath("GUIPanel3D/Viewport")

[sub_resource type="SpatialMaterial" id=18]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 17 )

[sub_resource type="BoxShape" id=19]
extents = Vector3( 1.5, 1, 0.05 )

[sub_resource type="DynamicFont" id=20]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=21]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=22]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="QuadMesh" id=23]
size = Vector2( 6, 5 )

[sub_resource type="ViewportTexture" id=24]
viewport_path = NodePath("GUIPanel3D2/Viewport")

[sub_resource type="SpatialMaterial" id=25]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
albedo_texture = SubResource( 24 )

[sub_resource type="BoxShape" id=26]
extents = Vector3( 3, 2.5, 0.05 )

[sub_resource type="QuadMesh" id=27]
size = Vector2( 8, 6 )

[sub_resource type="ViewportTexture" id=28]
viewport_path = NodePath("GUIPanel3D3/Viewport")

[sub_resource type="SpatialMaterial" id=29]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 28 )

[sub_resource type="BoxShape" id=30]
extents = Vector3( 4, 3, 0.05 )

[sub_resource type="DynamicFont" id=31]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0, 0, 0, 0.254902 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0, 0, 0, 0.376471 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0, 0, 0, 0.215686 )
shadow_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0, 0, 0, 0.317647 )

[sub_resource type="QuadMesh" id=36]
size = Vector2( 6, 7 )

[sub_resource type="ViewportTexture" id=37]
viewport_path = NodePath("GUIPanel3D4/Viewport")

[sub_resource type="SpatialMaterial" id=38]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 37 )

[sub_resource type="BoxShape" id=39]
extents = Vector3( 3, 3.5, 0.05 )

[sub_resource type="Animation" id=40]
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 3.76606, -2.71481, -6.1357e-07 ), Vector3( -3.37077e-07, -2.06896, 5.49168e-14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 90, 90, 0 ) ]
}

[sub_resource type="Animation" id=41]
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 3.76606, -2.71481, -6.1357e-07 ), Vector3( 0, -1.62835, 0 ) ]
}

[sub_resource type="Animation" id=42]
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 3.76606, -2.71481, -6.1357e-07 ), Vector3( 0, -1.4, 1.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="Spatial" type="Spatial"]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05971, -0.215273, 0.00501394 )
mesh = SubResource( 2 )
material/0 = null

[node name="Spatial" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0219055, -3.1123, 0 )

[node name="RigidBody" type="RigidBody" parent="."]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.0253319, -3.64916, 0 )
collision_layer = 5
mode = 1

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody/CollisionShape"]
mesh = SubResource( 5 )
material/0 = null

[node name="CollisionShape2" type="CollisionShape" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.664, -0.7, -1.513 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody/CollisionShape2"]
mesh = SubResource( 8 )
material/0 = null

[node name="CollisionShape5" type="CollisionShape" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.664, -0.7, -1.513 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody/CollisionShape5"]
mesh = SubResource( 8 )
material/0 = null

[node name="CollisionShape3" type="CollisionShape" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.664, -0.7, 1.513 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody/CollisionShape3"]
mesh = SubResource( 8 )
material/0 = null

[node name="CollisionShape4" type="CollisionShape" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.664, -0.7, 1.513 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody/CollisionShape4"]
mesh = SubResource( 8 )
material/0 = null

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.76606, -2.71481, -6.1357e-07 )

[node name="GUIPanel3D" type="Spatial" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 2.0758, -2.75427, 0.534987 )
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="GUIPanel3D"]
size = Vector2( 1000, 600 )
transparent_bg = true
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="GUI" type="Control" parent="GUIPanel3D/Viewport"]
margin_right = 1000.0
margin_bottom = 600.0
mouse_filter = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUIPanel3D/Viewport/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GUIPanel3D/Viewport/GUI/Panel"]
margin_left = 136.0
margin_top = 94.0
margin_right = 298.0
margin_bottom = 160.0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_hover = Color( 0.980469, 0.348526, 0.348526, 1 )
custom_colors/font_color_pressed = Color( 1, 0.180392, 0.180392, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="GUIPanel3D/Viewport/GUI/Panel"]
margin_left = 140.898
margin_top = 177.052
margin_right = 326.898
margin_bottom = 240.052
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_hover = Color( 0.980392, 0.345098, 0.345098, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="GUIPanel3D/Viewport/GUI/Panel"]
margin_left = 144.156
margin_top = 259.699
margin_right = 304.156
margin_bottom = 316.699
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_hover = Color( 0.980392, 0.345098, 0.345098, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "about"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="GUIPanel3D/Viewport/GUI/Panel"]
margin_left = 143.047
margin_top = 333.792
margin_right = 384.047
margin_bottom = 388.792
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_disabled = Color( 0.513726, 0.101961, 0.101961, 1 )
disabled = true
text = "Map Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUIPanel3D/Viewport/GUI/Panel/Button4"]
margin_left = 13.0
margin_top = 52.0
margin_right = 176.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.972549, 0.529412, 0.529412, 1 )
text = "(not happening btw)"

[node name="Button5" type="Button" parent="GUIPanel3D/Viewport/GUI/Panel"]
margin_left = 154.656
margin_top = 417.0
margin_right = 268.656
margin_bottom = 481.0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_hover = Color( 0.980392, 0.345098, 0.345098, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUIPanel3D/Viewport/GUI/Panel"]
margin_left = 492.932
margin_top = 24.0821
margin_right = 858.932
margin_bottom = 95.0821
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.278431, 0.278431, 0.278431, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "not karlson"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Quad" type="MeshInstance" parent="GUIPanel3D"]
mesh = SubResource( 16 )
material/0 = SubResource( 18 )

[node name="Area" type="Area" parent="GUIPanel3D/Quad"]
input_capture_on_drag = true
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="GUIPanel3D/Quad/Area"]
shape = SubResource( 19 )

[node name="GUIPanel3D2" type="Spatial" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -4.73935, -1.56539, 0.0802379 )
visible = false
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="GUIPanel3D2"]
size = Vector2( 600, 500 )
transparent_bg = true
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="GUI" type="Control" parent="GUIPanel3D2/Viewport"]
margin_right = 600.0
margin_bottom = 500.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUIPanel3D2/Viewport/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b" type="Button" parent="GUIPanel3D2/Viewport/GUI/Panel"]
margin_left = 25.3687
margin_top = 26.1713
margin_right = 187.369
margin_bottom = 92.1713
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_hover = Color( 0.980392, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 1, 0.180392, 0.180392, 1 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="accept" type="Button" parent="GUIPanel3D2/Viewport/GUI/Panel"]
margin_left = 460.024
margin_top = 289.88
margin_right = 547.024
margin_bottom = 326.88
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_hover = Color( 0.980392, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 1, 0.180392, 0.180392, 1 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUIPanel3D2/Viewport/GUI/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -143.0
margin_right = 70.0
margin_bottom = -97.0
custom_fonts/font = SubResource( 21 )
text = "Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="GUIPanel3D2/Viewport/GUI/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -94.0
margin_right = 84.0
margin_bottom = -47.0
custom_fonts/font = SubResource( 22 )
text = "640x360"
items = [ "640x360", null, false, 0, null, "960x540", null, false, 1, null, "1280x720", null, false, 2, null, "1920x1080", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quad" type="MeshInstance" parent="GUIPanel3D2"]
mesh = SubResource( 23 )
material/0 = SubResource( 25 )

[node name="Area" type="Area" parent="GUIPanel3D2/Quad"]
input_capture_on_drag = true
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="GUIPanel3D2/Quad/Area"]
shape = SubResource( 26 )
disabled = true

[node name="GUIPanel3D3" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0217519, -1.32865, -3.25094 )
visible = false
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="GUIPanel3D3"]
size = Vector2( 800, 600 )
transparent_bg = true
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="GUI" type="Control" parent="GUIPanel3D3/Viewport"]
margin_right = 800.0
margin_bottom = 600.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUIPanel3D3/Viewport/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b" type="Button" parent="GUIPanel3D3/Viewport/GUI/Panel"]
margin_left = 15.063
margin_top = 17.2378
margin_right = 180.063
margin_bottom = 92.2378
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_hover = Color( 0.980392, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 1, 0.180392, 0.180392, 1 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="testing" type="Button" parent="GUIPanel3D3/Viewport/GUI/Panel"]
margin_left = 315.063
margin_top = 199.238
margin_right = 482.063
margin_bottom = 274.238
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_hover = Color( 0.980392, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 1, 0.180392, 0.180392, 1 )
text = "testing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quad" type="MeshInstance" parent="GUIPanel3D3"]
mesh = SubResource( 27 )
material/0 = SubResource( 29 )

[node name="Area" type="Area" parent="GUIPanel3D3/Quad"]
input_capture_on_drag = true
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="GUIPanel3D3/Quad/Area"]
shape = SubResource( 30 )
disabled = true

[node name="GUIPanel3D4" type="Spatial" parent="."]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, 3.42833e-08, 3.896, 0.0964292 )
visible = false
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="GUIPanel3D4"]
size = Vector2( 600, 700 )
transparent_bg = true
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="GUI" type="Control" parent="GUIPanel3D4/Viewport"]
margin_right = 600.0
margin_bottom = 700.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUIPanel3D4/Viewport/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b" type="Button" parent="GUIPanel3D4/Viewport/GUI/Panel"]
margin_left = 28.4695
margin_top = 26.9797
margin_right = 171.47
margin_bottom = 95.9797
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_hover = Color( 0.980392, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 1, 0.180392, 0.180392, 1 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUIPanel3D4/Viewport/GUI/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.0
margin_top = -244.0
margin_right = 252.0
margin_bottom = -141.0
custom_fonts/font = SubResource( 31 )
text = "A game by Dani fan. Check out
his original game:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itch" type="Button" parent="GUIPanel3D4/Viewport/GUI/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.66
margin_top = -120.0
margin_right = 2393.34
margin_bottom = 1388.46
rect_scale = Vector2( 0.13, 0.13 )
custom_styles/hover = SubResource( 32 )
custom_styles/pressed = SubResource( 33 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="steam" type="Button" parent="GUIPanel3D4/Viewport/GUI/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.818
margin_top = 93.9276
margin_right = 239.182
margin_bottom = 308.928
custom_styles/hover = SubResource( 34 )
custom_styles/pressed = SubResource( 35 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quad" type="MeshInstance" parent="GUIPanel3D4"]
mesh = SubResource( 36 )
material/0 = SubResource( 38 )

[node name="Area" type="Area" parent="GUIPanel3D4/Quad"]
input_capture_on_drag = true
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="GUIPanel3D4/Quad/Area"]
shape = SubResource( 39 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/about = SubResource( 40 )
anims/options = SubResource( 41 )
anims/play = SubResource( 42 )
[connection signal="pressed" from="GUIPanel3D/Viewport/GUI/Panel/Button" to="GUIPanel3D/Viewport/GUI" method="_on_Button_pressed"]
[connection signal="pressed" from="GUIPanel3D/Viewport/GUI/Panel/Button2" to="GUIPanel3D/Viewport/GUI" method="_on_Button2_pressed"]
[connection signal="pressed" from="GUIPanel3D/Viewport/GUI/Panel/Button3" to="GUIPanel3D/Viewport/GUI" method="_on_Button3_pressed"]
[connection signal="pressed" from="GUIPanel3D/Viewport/GUI/Panel/Button5" to="GUIPanel3D/Viewport/GUI" method="_on_Button5_pressed"]
[connection signal="pressed" from="GUIPanel3D2/Viewport/GUI/Panel/b" to="GUIPanel3D/Viewport/GUI" method="_on_b_pressed"]
[connection signal="pressed" from="GUIPanel3D2/Viewport/GUI/Panel/accept" to="GUIPanel3D/Viewport/GUI" method="_on_accept_pressed"]
[connection signal="item_selected" from="GUIPanel3D2/Viewport/GUI/Panel/OptionButton" to="GUIPanel3D/Viewport/GUI" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="GUIPanel3D3/Viewport/GUI/Panel/b" to="GUIPanel3D/Viewport/GUI" method="_on_b_pressed"]
[connection signal="pressed" from="GUIPanel3D3/Viewport/GUI/Panel/testing" to="GUIPanel3D/Viewport/GUI" method="_on_testing_pressed"]
[connection signal="pressed" from="GUIPanel3D4/Viewport/GUI/Panel/b" to="GUIPanel3D/Viewport/GUI" method="_on_b_pressed"]
[connection signal="pressed" from="GUIPanel3D4/Viewport/GUI/Panel/itch" to="GUIPanel3D/Viewport/GUI" method="_on_itch_pressed"]
[connection signal="pressed" from="GUIPanel3D4/Viewport/GUI/Panel/steam" to="GUIPanel3D/Viewport/GUI" method="_on_steam_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="GUIPanel3D/Viewport/GUI" method="_on_AnimationPlayer_animation_finished"]
